RMP-12337 Remove email sending feature from cloudbreak
Signed-off-by: sodre90 <perdos@hortonworks.com>