@@ -7,9 +7,6 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.when;
 
-import java.time.Instant;
-import java.util.Collections;
-import java.util.Date;
 import java.util.List;
 import java.util.function.Supplier;
 
@@ -22,7 +19,7 @@ import org.mockito.Spy;
 import org.mockito.junit.MockitoJUnitRunner;
 import org.mockito.stubbing.Answer;
 
-import com.sequenceiq.cloudbreak.common.model.user.IdentityUser;
+import com.sequenceiq.cloudbreak.common.model.user.CloudbreakUser;
 import com.sequenceiq.cloudbreak.common.service.user.UserDetailsService;
 import com.sequenceiq.cloudbreak.domain.workspace.User;
 import com.sequenceiq.cloudbreak.domain.workspace.Workspace;
@@ -64,10 +61,10 @@ public class UserAndWorkspaceMigratorTest {
     @Before
     public void setup() throws TransactionExecutionException {
         doAnswer(invocation -> ((Supplier<?>) invocation.getArgument(0)).get()).when(transactionService).required(any());
-        when(userService.getOrCreate(any(IdentityUser.class))).thenAnswer((Answer<User>) invocation -> {
-            IdentityUser identityUser = invocation.getArgument(0);
+        when(userService.getOrCreate(any(CloudbreakUser.class))).thenAnswer((Answer<User>) invocation -> {
+            CloudbreakUser cloudbreakUser = invocation.getArgument(0);
             User user = new User();
-            user.setUserId(identityUser.getUsername());
+            user.setUserId(cloudbreakUser.getUsername());
             return user;
         });
         when(workspaceRepository.save(any(Workspace.class)))
@@ -79,22 +76,16 @@ public class UserAndWorkspaceMigratorTest {
 
     @Test
     public void testWithUsersInCommonAccounts() throws TransactionExecutionException {
-        List<IdentityUser> identityUsers = List.of(
-                new IdentityUser("1", "1@hw.com", "1",
-                        Collections.emptyList(), "1", "1", Date.from(Instant.now())),
-                new IdentityUser("2", "2@hw.com", "1",
-                        Collections.emptyList(), "1", "1", Date.from(Instant.now())),
-                new IdentityUser("3", "3@hw.com", "3",
-                        Collections.emptyList(), "1", "1", Date.from(Instant.now())),
-                new IdentityUser("4", "4@hw.com", "4",
-                        Collections.emptyList(), "1", "1", Date.from(Instant.now())),
-                new IdentityUser("5", "5@hw.com", "4",
-                        Collections.emptyList(), "1", "1", Date.from(Instant.now())),
-                new IdentityUser("6", "6@hw.com", "6",
-                        Collections.emptyList(), "1", "1", Date.from(Instant.now())));
+        List<CloudbreakUser> cloudbreakUsers = List.of(
+                new CloudbreakUser("1", "1@hw.com", "1"),
+                new CloudbreakUser("2", "2@hw.com", "1"),
+                new CloudbreakUser("3", "3@hw.com", "3"),
+                new CloudbreakUser("4", "4@hw.com", "4"),
+                new CloudbreakUser("5", "5@hw.com", "4"),
+                new CloudbreakUser("6", "6@hw.com", "6"));
 
 
-        when(userDetailsService.getAllUsers(null)).thenReturn(identityUsers);
+        when(userDetailsService.getAllUsers(null)).thenReturn(cloudbreakUsers);
 
         UserMigrationResults userMigrationResults = underTest.migrateUsersAndWorkspaces();
         assertEquals(6, userMigrationResults.getOwnerIdToUser().size());
